# shopify_env

Shopify/shopify_env/: create_product.py  get_products.py  pyproject.toml
